--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,34 +1,7 @@
 <div class="row">
   <script defer src="renderer.js"></script>
-  </head><div class="row"></div>
-  <table class="span12">
-  <tbody>
-    <ul class="versions code">
-      <li class="electron-version"></li>
-    </ul>
-      <tr>
-          <td class="span1"><button id ='setRequiredFeaturesBtn' class="btn">setRequiredFeatures</button></td>
-          <td class="span1"><button id ='getInfoBtn' class="btn">getInfo</button></td>
-          <td class="span1"><button id ='createOSR' class="btn">Create OSR</button></td>
-          <td class="span1"><button id ='visibilityOSR' class="btn">Show all OSR</button></td>
-          <td class="span1"><button id ='updateHotkey' class="btn">update Hotkey</button></td>
-      </tr>
-      <script>
-   </script>
-     <script>
-      const changeOpacityValue = (element) => {
-        document.getElementById('opacityValue').value = element.value;
-      }
-      const animationDurationValue = (element) => {
-        document.getElementById('animationDuration').value = element.value;
-      }
-      window.app.initialize();
-
-    </script>
-  </tbody>
-  </table>
 </div>
-<br/>
+<br />
 <div>
   <h2>Log:</h2>
   <div class="row">
@@ -44,43 +17,21 @@
   </div>
 </div>
 </div>
-<br>
-<div >
-  <div class="views" style="display: flex; gap: 24px;">
-    <div class="left-view">
-      <h2>Ad view:</h2>
-      <div style='width: 400px; height: 300px; border: 1px solid;background: transparent;'>
-        <owadview slotsize='400x300' cid='mainAd' />
-      </div>
+<br />
+<div>
+  <h2>Screen Capture</h2>
+  <div style="display:flex; gap:16px; align-items:flex-start; flex-wrap:wrap;">
+    <div style="display:flex; gap:8px;">
+      <button id="scStartBtn" class="btn">Start</button>
+      <button id="scStopBtn" class="btn">Stop</button>
+      <button id="scRefreshBtn" class="btn">Refresh</button>
+      <button id="scListBtn" class="btn">List Windows</button>
     </div>
-    <div class="left-view">
-      <h2>Input Exclusive:</h2>
-      <div style='width: 400px; height: 300px; border: 1px solid;background: transparent;'>
-        <label style="display: block; margin-bottom: 10px;">
-          Background Color
-          <input type="color" rgba value="#0c0c0c" id="colorPicker">
-        </label>
-         <label style="display: block; margin-bottom: 10px;">
-          <div>Opacity</div>
-          <input type="range" min="0.0" max="1.0" value="0.5" step="0.1" id="opacityRange"  onchange="changeOpacityValue(this)">
-          <input type="input" readonly value="0.5" id="opacityValue">
-        </label>
-        <label style="display: block; margin-bottom: 10px;">
-          <div>Animation Duration</div>
-          <input type="range" min="0" max="1000" value="100" step="10" id="animationDurationRange" onchange="animationDurationValue(this)">
-          <input type="input" readonly value="100" id="animationDuration">
-        </label>
-        <label style="display: block; margin-bottom: 10px;">
-          <div> Type </div>
-            <input type="radio" name="exclusiveType" value="native" checked="checked"> Native
-            <input type="radio" name="exclusiveType" value="customWindow"> As Window
-        </label>
-        <label style="display: block; margin-bottom: 10px;">
-          <div> hotkey Behavior </div>
-            <input type="radio" name="behavior" value="toggle" checked="checked"> toggle
-            <input type="radio" name="behavior" value="pressed"> pressed
-        </label>
-      </div>
+    <div>
+      <div style="font-weight:600; margin-bottom:6px;">Last Screenshot</div>
+      <img id="scPreview" alt="last screenshot" style="max-width:420px; max-height:236px; border:1px solid #ccc; background:#111; display:block" />
+      <pre id="scStats" style="margin-top:8px; max-width:420px; overflow:auto"></pre>
     </div>
   </div>
+  <small style="display:block; margin-top:6px; color:#777;">Captura cada 3s; tamaño optimizado 1280x720.</small>
 </div>
